--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 
 services:
     php:
+        restart: always
         image: custom-php
         build: ./docker/php
         ports:
-            - 80:80
+            - 3000:80
         volumes:
             - ./app/src:/var/www/html
